recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:16: error: not found: value y
      gauche (y:Double)
              ^Tree:18: error: not found: value y
      gauche(y:Double)
             ^