recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps!=0  ) {
    if(angle%1==0){
    current(steps)
    avance(length*shrink:Double)
    droite(angle:Double)
      return tree(steps-1,length*shrink,angle,shrink)}
    else{
      var x= 0
      while (angle%1==0){
       var y:Double = angle/shrink
        x+=1 
      }
      for (i<-0 to x-1){
      
      gauche (y:Double)
      recule(length/shrink:Double)
      gauche(y:Double)
      current (steps)
      avance(length*shrink:Double)
      
      }
   
      }
}
      
    
  
  else if (steps==0 )
  {gauche(angle:Double)
    recule(length/shrink:Double)
     return tree (steps+1,length/shrink,angle*shrink,shrink)}
  
  
  
}